// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshots Example/Button Large 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--large"
  type="button"
>
  Button
</button>
`;

exports[`Storybook Snapshots Example/Button Primary 1`] = `
<button
  class="storybook-button storybook-button--primary storybook-button--medium"
  type="button"
>
  Button
</button>
`;

exports[`Storybook Snapshots Example/Button Secondary 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--medium"
  type="button"
>
  Button
</button>
`;

exports[`Storybook Snapshots Example/Button Small 1`] = `
<button
  class="storybook-button storybook-button--secondary storybook-button--small"
  type="button"
>
  Button
</button>
`;
